<resources>
    <string name="app_name" translatable="false">HomeworkProject</string>
    <string name="welcome_text">WELCOME TO THE</string>
    <string name="welcome_end_text">UNIVERSE</string>
    <string name="select_theme_text">Choose which side you\'re on and let\'s get started!</string>
    <string name="light_theme">Light</string>
    <string name="dark_theme">Dark</string>
    <string name="auto_theme">Haven\'t decided yet</string>
    <string name="start_screen_button">Begin the journey</string>
    <string name="light_check_box_pushed">This world isn\'t perfect, but it\'s the only one we have</string>
    <string name="dark_check_box_pushed">We never lose our demons, we only learn to live with them</string>
    <string name="auto_check_box_pushed">Sometimes the best thing we can do is start over</string>
    <string name="character_avatar_description">Character avatar</string>
    <string name="character_name_description">Character name</string>
    <string name="character_description">Character description</string>
    <string name="search_character">SEARCH</string>
    <string name="search_button">Search button</string>
    <string name="characters_list_title">MARVEL CHARACTERS LIST</string>
    <string name="remove">Hide</string>
    <string name="add_to_favorites">Add to Favorites</string>
    <string name="menu">Menu</string>
    <string name="add_character">Add a character</string>
    <string name="copyright_text" translatable="false">© MARVEL</string>
    <string name="no_characters_found">No results found... \n \n Maybe you should try another name : )</string>
    <string name="comics_image_description">Comics image</string>
    <string name="comics_name_description">Comics name</string>
    <string name="comics_text_description">Comics list</string>
    <string name="back_button_description">Back to characters list button</string>
    <string name="comics_text">COMICS LIST</string>
    <string name="see_more_details_button">SEE MORE DETAILS</string>
    <string name="see_more_details_description">SEE MORE DETAILS BUTTON</string>
    <string name="characters_description_not_found" translatable="false">The character\'s description hasn\'t been added yet</string>
    <string name="no_comics_found" translatable="false">No comics found...</string>
    <string name="comics_not_found_description">No comics found message</string>
    <string name="error_on_opening_browser">An error occurred when trying to open the browser</string>
    <string name="character_was_added_to_favorites">The character was added to Favorites</string>
    <string name="favorite_characters_list_title">FAVORITE CHARACTERS</string>
    <string name="no_favorite_characters_found">There are no characters in Favorites yet</string>
    <string name="character_was_deleted">The character was deleted from Favorites</string>
    <string name="cancel_deletion">Cancel deletion</string>
    <string name="main_page_title">Characters</string>
    <string name="favorites_page_title">Favorites</string>
</resources>
